feat)modelpurchaseavaility