@@ -22,6 +22,7 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j(topic = "ModelService")
@@ -40,24 +41,24 @@ public class ModelService {
 
         return models.stream()
                 .map(model -> {
-                    UserModelDto.ModelResponse response = UserModelDto.ModelResponse.from(model);
-                    userId.ifPresent(uId -> {
-                        response.setPurchased(checkIfModelPurchased(uId, model.getId()));
-                    });
-                    return response;
+                    boolean purchaseAvailability = userId
+                            .map(uId -> !uId.equals(model.getAuthor().getId()) && !checkIfModelPurchased(uId, model.getId()))
+                            .orElse(true);  // 비로그인 유저는 모든 도면을 구매할 수 있다고 가정
+                    return UserModelDto.ModelResponse.from(model, purchaseAvailability);
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public UserModelDto.ModelResponse getModelDetail(Long modelId, Long userId) {
+    public UserModelDto.ModelResponse getModelDetail(Long modelId, Optional<Long> userId) {
         Model model = modelRepository.findById(modelId).orElseThrow(() ->
                 new ResponseStatusException(HttpStatus.NOT_FOUND, "도면을 찾을 수 없습니다."));
-        boolean isPurchased = checkIfModelPurchased(userId, modelId);
 
-        UserModelDto.ModelResponse response = UserModelDto.ModelResponse.from(model);
-        response.setPurchased(isPurchased);  // 구매 여부 설정
+        boolean purchaseAvailability = userId
+                .map(uId -> !uId.equals(model.getAuthor().getId()) && !checkIfModelPurchased(uId, modelId))
+                .orElse(true);  // 비로그인 유저는 모든 도면을 구매할 수 있다고 가정
 
-        // 조회수 업데이트
+        UserModelDto.ModelResponse response = UserModelDto.ModelResponse.from(model, purchaseAvailability);
+
         model.setViewCount(model.getViewCount() + 1);
         modelRepository.save(model);
 
@@ -69,9 +70,8 @@ public class ModelService {
                 new ResponseStatusException(HttpStatus.NOT_FOUND, "유저를 찾을 수 없습니다."));
         log.info("userid: {}", user.getId());
 
-        // Author 엔티티를 가져오거나 없으면 생성
         Author author = authorRepository.findById(user.getId()).orElseGet(() -> {
-            Author newAuthor = Author.builder()
+            return Author.builder()
                     .user(user)
                     .id(user.getId())
                     .realname(user.getRealname())  // User의 realname을 Author의 realname에 복사
@@ -79,10 +79,8 @@ public class ModelService {
                     .modelCount(0)
                     .viewCount(0)
                     .build();
-            return newAuthor;
         });
 
-        // Author가 새로 생성되었거나 기존 Author의 realname이 없을 경우 업데이트
         if (author.getRealname() == null) {
             author.setRealname(user.getRealname());
         }
@@ -90,7 +88,6 @@ public class ModelService {
         authorRepository.save(author);
 
         File modelFile = fileService.saveModel(request.getModelFile());
-
         Model newModel = Model.builder()
                 .author(author)
                 .name(request.getName())
@@ -105,53 +102,47 @@ public class ModelService {
                 .modelFile(modelFile)
                 .build();
 
-        return UserModelDto.ModelResponse.from(modelRepository.save(newModel));
+        modelRepository.save(newModel);
+        return UserModelDto.ModelResponse.from(newModel, false);  // 업로드한 도면은 구매 불가능
     }
 
     public List<UserModelDto.ModelResponse> getMyDownloadedModelList(int page, Long userId) {
         Pageable pageable = PageRequest.of(page, 10);
-        return modelPurchaseRepository.findAllByUserIdOrderByCreateDateDesc(userId, pageable).stream()
-                .map(UserModelDto.ModelResponse::from)
-                .toList();
+        List<ModelPurchase> purchases = modelPurchaseRepository.findAllByUserIdOrderByCreateDateDesc(userId, pageable).getContent();
+
+        return purchases.stream()
+                .map(purchase -> UserModelDto.ModelResponse.from(purchase.getModel(), false))
+                .collect(Collectors.toList());
     }
 
     public UserModelDto.ModelResponse purchaseModel(Long userId, Long modelId) {
-        // 유저 조회
         User user = userRepository.findById(userId).orElseThrow(() ->
                 new ResponseStatusException(HttpStatus.NOT_FOUND, "유저를 찾을 수 없습니다."));
-
-        // 모델 조회
         Model model = modelRepository.findById(modelId).orElseThrow(() ->
                 new ResponseStatusException(HttpStatus.NOT_FOUND, "모델을 찾을 수 없습니다."));
 
-        // 자신이 올린 도면인지 확인
         if (model.getAuthor().getUser().getId().equals(userId)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "자신이 판매중인 도면은 구매할 수 없습니다.");
         }
 
-        // 이미 구매한 도면인지 확인
         modelPurchaseRepository.findByUserIdAndModelId(userId, modelId).ifPresent(modelPurchase -> {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "이미 구매한 모델입니다.");
         });
 
-        // 구매 정보 저장
-        modelPurchaseRepository.save(ModelPurchase.builder()
-                .user(user)
-                .model(model)
-                .build());
-
-        // 다운로드 수 증가
+        modelPurchaseRepository.save(ModelPurchase.builder().user(user).model(model).build());
         model.setDownloadCount(model.getDownloadCount() + 1);
+        modelRepository.save(model);
 
-        // 응답 DTO 반환
-        return UserModelDto.ModelResponse.from(model);
+        return UserModelDto.ModelResponse.from(model, false);
     }
 
     public List<UserModelDto.ModelResponse> getMyUploadedModelList(int page, Long userId) {
         Pageable pageable = PageRequest.of(page, 10);
-        return modelRepository.findAllByAuthorIdOrderByCreateDateDesc(userId, pageable).stream()
-                .map(UserModelDto.ModelResponse::from)
-                .toList();
+        List<Model> models = modelRepository.findAllByAuthorIdOrderByCreateDateDesc(userId, pageable).getContent();
+
+        return models.stream()
+                .map(model -> UserModelDto.ModelResponse.from(model, false))
+                .collect(Collectors.toList());
     }
 
     private boolean checkIfModelPurchased(Long userId, Long modelId) {
@@ -160,9 +151,9 @@ public class ModelService {
 
     // 도면 수정
     public UserModelDto.ModelResponse updateModel(Long modelId, Long userId, UserModelDto.ModelUploadRequest request) {
-        Model model = modelRepository.findById(modelId).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "도면을 찾을 수 없습니다."));
+        Model model = modelRepository.findById(modelId).orElseThrow(() ->
+                new ResponseStatusException(HttpStatus.NOT_FOUND, "도면을 찾을 수 없습니다."));
 
-        // 유저가 도면의 작가인지 확인
         if (!model.getAuthor().getId().equals(userId)) {
             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "이 도면을 수정할 권한이 없습니다.");
         }
@@ -174,13 +165,13 @@ public class ModelService {
         model.setLengthSize(request.getLengthSize());
         model.setHeightSize(request.getHeightSize());
 
-        // 파일 업데이트 (선택적)
         if (request.getModelFile() != null) {
             File modelFile = fileService.saveModel(request.getModelFile());
             model.setModelFile(modelFile);
         }
 
-        return UserModelDto.ModelResponse.from(modelRepository.save(model));
+        modelRepository.save(model);
+        return UserModelDto.ModelResponse.from(model, false);  // 업데이트한 도면은 구매 불가능
     }
 
     // 도면 삭제
